# conventional-commits-validator

./: .gitattributes  CHANGELOG.md  Cargo.toml  Dockerfile.alpine  Dockerfile.distroless  README.md  RELEASING.md  conventional-commits.yaml  release-plz.toml
.github/: app-manifest.json  setup-github-app.sh
.github/workflows/: ci.yml  release-plz.yml  release.yml
buildSrc/src/main/kotlin/: publish-conventions.gradle.kts
gradle-plugin/: build.gradle.kts
gradle-plugin/src/test/java/io/github/fomin/conventionalcommits/: ConventionalCommitsGradlePluginTest.java
scripts/: release
src/: app.rs  cli.rs  config.rs  default.yaml  git.rs  main.rs  parser.rs  strict.yaml  validator.rs
tests/: integration_test.rs
