[package]
name = "conventional-commits-validator"
version = "0.1.6"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/andrey-fomin/conventional-commits-validator"

[[bin]]
name = "ccval"
path = "src/main.rs"

[dependencies]
regex-lite = "0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
thiserror = "2.0.18"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
